src/main/java/com/example/stream/spring/courses/reactive/example/model/error/DepartmentSuccess.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface DepartmentSuccess extends Success permits DepartmentDeleteOk {
}
